feat(json): Improving data quality